[gd_scene load_steps=5 format=3 uid="uid://bx5jp6asn06qx"]

[ext_resource type="Script" path="res://scripts/one_way_platform.gd" id="1_grtn8"]
[ext_resource type="Texture2D" uid="uid://bupbf2eu6hdg3" path="res://sprites/alt-platform-on.png" id="2_4k8no"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gix7a"]
size = Vector2(16, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ayxk7"]
size = Vector2(16, 1)

[node name="OneWayPlatform" type="Node2D"]
use_parent_material = true

[node name="OneWay" type="Node" parent="." node_paths=PackedStringArray("collision", "platform_position")]
script = ExtResource("1_grtn8")
collision = NodePath("../StaticBody2D/CollisionShape2D")
platform_position = NodePath("../Marker2D")

[node name="Sprite" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("2_4k8no")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_gix7a")
one_way_collision = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -7)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_ayxk7")

[connection signal="body_entered" from="Area2D" to="OneWay" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="OneWay" method="_on_body_exited"]
